# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2007-01-01 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* THANKS: Updated.

2007-01-01 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* src/chemical-mime-database.xml.in: Added chemical/x-cactvs-ascii,
	chemical/x-cactvs-binary and chemical/x-cactvs-table MIME types.
	Thanks to Wolf-D. Ihlenfeldt. Added CACTVS applications that support
	our MIME types (based on
	http://www2.chemie.uni-erlangen.de/software/cactvs/mime.html). Small
	cleanups to the database.
	(chemical/x-ncbi-asn1-binary): Fixed the magic pattern. But I fear,
	it's still not perfect.

2006-12-30 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* src/chemical-mime-database.xml.in: Made all acronym and
	expanded-acronym elements untranslatable. The acronyms used here are
	only hardly translatable, so we let it be.
	(chemical/x-cdx, chemical/x-cdxml): Improved MIME type description.

2006-12-30 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* autogen.sh: Fixed a typo.
	(AUTOMAKE_FILES): Define list depending on the automake version.

	* configure.ac: Fixed description of `--with-pixmaps' option. Replaced
	`--with-gnome-theme' with the more appropriate `--with-hicolor-theme'
	option. The latter also changed all relevant variables. Further
	removed the `--with-kde-theme' option. This option is obsolete with
	these changes.
	(AM_INIT_AUTOMAKE): Fixed macro usage. Providing AC_PACKAGE_ variables
	to this macro is obsolete.
	(KDE_CONFIG, with_kde_mime): Improved path search by using
	`kde-config'.
	(BOOL_*): Fixed/improved boolean variables.
	(AC_CONFIG_FILES): Removed icons/crystalsvg/Makefile, that was
	removed.

	* icons/hicolor/Makefile.am:
	* icons/pixmaps/Makefile.am: Changed theme related variables
	accordingly to the changes in configure.ac.

	* icons/Makefile.am (SUBDIRS):
	* icons/crystalsvg/Makefile.am:
	* icons/crystalsvg/chemistry.svg:
	* icons/pixmaps/Makefile.am (pixmaps_list):